<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFirstAndroidProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Add_New_Todo">Add New Todo</string>
    <string name="title_activity_all_todo">AllTodoActivity</string>
    <string name="title_activity_new_todo">NewTodoActivity</string>
    <string name="due_Time">Due Time</string>
    <string name="due_Date">Due Date</string>
    <string name="Todo_Name">Todo Name</string>
    <string name="Location">Location</string>
    <string name="Create_Todo">Create Todo</string>
    <string name="title_activity_edit_todo">EditTodoActivity</string>
    <string name="Save_Changes">Save Todo</string>
    <string name="Delete">Delete Todo</string>
    <string name="viewTodo">View List</string>
    <string name="title_activity_login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Do_not_have_an_account_Register_here">Do not have an account? Register here</string>
    <string name="Full_Name">Full Name</string>
    <string name="Register_New_Account">Register New Account</string>
    <string name="Have_an_account_Login_here">Have an account? Login Here</string>
</resources>
